native/BetaOps: betaincinv have been added
- betaincinv has been implemented
  forward op is in native/BetaOps.cpp
  backward op is in FunctionsManual
- Reference: https://github.com/tensorflow/probability/blob/
  751461f84b8d29c83216d719950b8d999c7381d5/
  tensorflow_probability/python/math/special.py#L567-L868

Signed-off-by: Taeksang Kim <voidbag@gmail.com>

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -13585,6 +13585,66 @@
   dispatch:
     CompositeExplicitAutograd: special_betaln_out
 
+- func: special_betaincinv(Tensor self, Tensor a, Tensor b) -> Tensor
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv
+
+- func: special_betaincinv.x_scalar(Scalar self, Tensor a, Tensor b) -> Tensor
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv
+
+- func: special_betaincinv.a_scalar(Tensor self, Scalar a, Tensor b) -> Tensor
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv
+
+- func: special_betaincinv.b_scalar(Tensor self, Tensor a, Scalar b) -> Tensor
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv
+
+- func: special_betaincinv.ab_scalar(Tensor self, Scalar a, Scalar b) -> Tensor
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv
+
+- func: special_betaincinv.out(Tensor self, Tensor a, Tensor b, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv_out
+
+- func: special_betaincinv.x_scalar_out(Scalar self, Tensor a, Tensor b, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv_out
+
+- func: special_betaincinv.a_scalar_out(Tensor self, Scalar a, Tensor b, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv_out
+
+- func: special_betaincinv.b_scalar_out(Tensor self, Tensor a, Scalar b, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv_out
+
+- func: special_betaincinv.ab_scalar_out(Tensor self, Scalar a, Scalar b, *, Tensor(a!) out) -> Tensor(a!)
+  python_module: special
+  variants: function
+  dispatch:
+    CompositeExplicitAutograd: special_betaincinv_out
+
 - func: special_i0(Tensor self) -> Tensor
   python_module: special
   variants: function
